--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Inika';
+    font-style: normal;
+    font-weight: 400;
+    src: url("assets/fonts/inika-v21-latin-regular.ttf");
+  }
+
 * {
     box-sizing: border-box;
     margin:0;
@@ -9,15 +16,24 @@ body {
     background-size: cover;
     background-attachment:fixed;
     color: white;
+    font-family: Inika;
 }
 
 .memecontanier {
-    border:1px solid white;
+    border-bottom:1px solid rgba(255, 255, 255, 0.529);
     
 }
+
+.maintitle {
+    font-size: 30px;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    padding-bottom: 10px;
+    border-bottom:1px solid rgba(255, 255, 255, 0.529);
+}
 .img {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
 }
 
 .main {
@@ -26,24 +42,31 @@ body {
 }
 
 .title {
+    font-size: 20px;
 margin:10px;
     cursor: pointer;
     display: block;
-
+transition: color 0.5s;
 }
 
 
 
 
 .des {
-    display: none;
+   
     margin-bottom: 10px;
+overflow: hidden;
+
+display: none;
 }
 
-.title:hover + .des  {
-    display: flex;
-    justify-content: center;
-    }
+
+    .title:hover + .des   {
+        display: block;
+        display: flex;
+        justify-content: center;
+      
+        }
 
     .inp {
         appearance: none;
@@ -56,9 +79,38 @@ margin:10px;
         justify-content: center;
     }
     .inp:checked ~ .title {
-        color: firebrick;
+        color: rgba(178, 60, 34, 0.711);
     }
-   
     .memes:hover  {
-        color: firebrick;
+        color:rgba(178, 60, 34, 0.711);
     }
+
+
+    @media screen and (max-width: 820px) {
+   .title {
+font-size: 25px;
+}
+
+        .main {
+            width:400px;
+            margin:40px auto;
+        }
+    }
+
+    
+    @media screen and (max-width: 570px) {
+
+        .main {
+            width:270px;
+            margin:40px auto;
+        }
+        
+        .img {
+            width: 230px;
+            height: 230px;
+        }
+        .title {
+            font-size: 25px;
+            }
+    }
+
