--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -31,6 +31,7 @@ body {
     padding-bottom: 10px;
     border-bottom:1px solid rgba(255, 255, 255, 0.529);
 }
+
 .img {
     width: 250px;
     height: 250px;
@@ -45,7 +46,8 @@ body {
     font-size: 20px;
 margin:10px;
     cursor: pointer;
-    display: block;
+    display: flex;
+    justify-content: space-between;
 transition: color 0.5s;
 }
 
@@ -68,6 +70,11 @@ display: none;
       
         }
 
+        .title:hover::after   {
+            transform: rotate(45deg);
+            transition: transform 0.5s;
+            }
+    
     .inp {
         appearance: none;
         width: 0;
@@ -81,10 +88,20 @@ display: none;
     .inp:checked ~ .title {
         color: rgba(178, 60, 34, 0.711);
     }
+    .inp:checked ~ .title::after {
+       transform: rotate(45deg);
+       transition: transform 0.5s;
+    }
     .memes:hover  {
         color:rgba(178, 60, 34, 0.711);
     }
 
+.memes:hover .title::after {
+    content: "+";
+    display: block;
+   font-size: 25px;
+   transition: transform 0.5s;
+}
 
     @media screen and (max-width: 820px) {
    .title {
